--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cached_network_image: ^3.2.2
 #  google_maps_flutter: ^2.2.0
 #  flutter_google_places: ^0.3.0
+  yandex_mapkit: ^3.2.0
   fluttertoast: ^8.0.9
   geolocator: ^9.0.1
   geocoding: ^2.0.5
