--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_launcher_icons: ^0.10.0
   flutter_multi_formatter: ^2.11.1
   flutter_otp_text_field: ^1.1.1
+  provider: ^6.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
