--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_multi_formatter: ^2.11.1
   flutter_otp_text_field: ^1.1.1
   provider: ^6.0.2
+  uuid: ^3.0.7
 
 
   # The following adds the Cupertino Icons font to your application.
