--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_otp_text_field: ^1.1.1
   provider: ^6.0.2
   uuid: ^3.0.7
+  custom_marker: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
