--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   provider: ^6.0.2
   uuid: ^3.0.7
   custom_marker: ^1.0.0
+  rxdart: ^0.27.7
 
 
   # The following adds the Cupertino Icons font to your application.
